--- a/mcotac-gem/Makefile
+++ b/mcotac-gem/Makefile
@@ -1,22 +1,23 @@
-CC = gcc-4.3
-CXX = g++-4.3
-FORT = gfortran-4.3
-CFLAGS = -c  -g -O2 -DIPMGEMPLUGIN -pedantic -fno-nonansi-builtins -D__unix 
+CC = pgcc
+CXX = pgCC
+FORT = pgf90
+CFLAGS = -c  -g -O2 -DIPMGEMPLUGIN -D__unix -D__PGI -Mpreprocess
 # -lstd -lC -lpgc -lrt -Msecond_underscore
-CCFLAGS =   -c -g -O2 -DIPMGEMPLUGIN -D__unix
-CCFLAGS1 =   -c -g -O2 -DIPMGEMPLUGIN -D__unix
-FFLAGS = -c -g -O2 -fbounds-check -fno-underscoring -DIPMGEMPLUGIN -D__unix -D__GNU
-LINK = gfortran-4.3
-LFLAGS = -lstdc++ -lgfortran
+CCFLAGS =   -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__PGI -Mpreprocess
+CCFLAGS1 =   -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__PGI -Mpreprocess
+FFLAGS = -c -g -O2 -DIPMGEMPLUGIN -D__unix -D__GNU -D__PGI -Mnosecond_underscore -Mpreprocess
+LINK = pgf90
+LFLAGS = 
+LIBS = -lrt -lstd -lC -lpgc 
 GEMINCLUDE = ../GEMIPM2K
-GEMLIB     = ../GEMIPM2K
-EXEC = mcotacgem-gnu
+GEMLIB     = -L../GEMIPM2K -lgemipm2k-pgi
+EXEC = mcotacgem-pgi
 
 ${EXEC}: mcotac1d.o datio.o erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o \
        f_gem_node.o
        
 	${LINK} -o ${EXEC}  ${LFLAGS} mcotac1d.o datio.o \
-                 erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o f_gem_node.o -L${GEMLIB} -lgemipm2k
+          erech.o inistat2.o inparf.o setpar_.o walk2_.o wegdat1d_.o hydro1d_.o f_gem_node.o  ${GEMLIB}  ${LIBS}
 
 mcotac1d.o: mcotac1d.f gwheader.inc kinetics.inc
 	cp mcotac1d.f mcotac1d.fpp
@@ -42,17 +43,18 @@ wegdat1d_.o: wegdat1d_.c gwheader.h
 hydro1d_.o: hydro1d_.c  gwheader.h
 	$(CC)  $(CFLAGS)  hydro1d_.c
 
-f_gem_node.o: f_gem_node.cpp ${GEMINCLUDE}/node.h \
-		${GEMINCLUDE}/m_param.h \
-		${GEMINCLUDE}/datach.h \
-		${GEMINCLUDE}/databr.h \
-		${GEMINCLUDE}/gdatastream.h \
-		${GEMINCLUDE}/ms_multi.h \
-		${GEMINCLUDE}/verror.h \
-		${GEMINCLUDE}/gstring.h \
-		${GEMINCLUDE}/array.h \
-		${GEMINCLUDE}/m_const.h \
-		${GEMINCLUDE}/v_user.h
+
+f_gem_node.o: f_gem_node.cpp ../GEMIPM2K/node.h \
+		../GEMIPM2K/m_param.h \
+		../GEMIPM2K/datach.h \
+		../GEMIPM2K/databr.h \
+		../GEMIPM2K/gdatastream.h \
+		../GEMIPM2K/ms_multi.h \
+		../GEMIPM2K/verror.h \
+		../GEMIPM2K/gstring.h \
+		../GEMIPM2K/array.h \
+		../GEMIPM2K/m_const.h \
+		../GEMIPM2K/v_user.h
 	$(CXX)  $(CCFLAGS1) -I${GEMINCLUDE}  f_gem_node.cpp
 
 #gwheader.h: gwheader.h
@@ -61,4 +63,4 @@ f_gem_node.o: f_gem_node.cpp ${GEMINCLUDE}/node.h \
 #kinetics.inc: kinetics.inc
 
 clean: 
-	rm -f *.o *.ti *.fpp
+	rm -f *.o *.ti
